--- a/src/app/access/signup.component.html
+++ b/src/app/access/signup.component.html
@@ -58,6 +58,9 @@
                     <div class="alert alert-danger" *ngIf="stepOneForm.get('email').touched && stepOneForm.get('email').hasError('pattern')">
                         Ingrese un correo electrónico válido.
                     </div>
+                    <div class="alert alert-danger" *ngIf="stepOneForm.get('email').touched && stepOneForm.controls.email.errors?.CorreoTaken">
+                        Correo electrónico ya registrado. Intente con otro.
+                    </div>
                 </div>
             </div>
             <div class="form-group">
@@ -66,6 +69,12 @@
                     <input [(ngModel)]="username" class="form-control" type="text" formControlName="username">
                     <div class="alert alert-danger" *ngIf="stepOneForm.get('username').touched && stepOneForm.get('username').hasError('required')">
                         Nombre de usuario es requerido.
+                    </div>
+                    <div class="alert alert-danger" *ngIf="stepOneForm.get('username').touched && stepOneForm.get('username').hasError('pattern')">
+                        Ingrese un nombre de usuario sin espacios en blanco.
+                    </div>
+                    <div class="alert alert-danger" *ngIf="stepOneForm.get('username').touched && stepOneForm.get('username').hasError('minlength')">
+                        La longitud mínima debe ser de 4 caracteres.
                     </div>
                     <div class="alert alert-danger" *ngIf="stepOneForm.get('username').touched && stepOneForm.controls.username.errors?.UsernameTaken">
                         Nombre de usuario no disponible.
@@ -133,18 +142,18 @@
                 <label class="col-sm-2 control-label">Semestre está cursando</label>
                 <div class="col-sm-10">
                     <select [(ngModel)]="semestre" class="form-control" name="semestre">
-                    <option value=1>1</option>
-                    <option value=2>2</option>
-                    <option value=3>3</option>
-                    <option value=4>4</option>
-                    <option value=5>5</option>
-                    <option value=6>6</option>
-                    <option value=7>7</option>
-                    <option value=8>8</option>
-                    <option value=9>9</option>
-                    <option value=10>10</option>
-                    <option value=11>10+</option>
-                </select>
+                        <option value=1>1</option>
+                        <option value=2>2</option>
+                        <option value=3>3</option>
+                        <option value=4>4</option>
+                        <option value=5>5</option>
+                        <option value=6>6</option>
+                        <option value=7>7</option>
+                        <option value=8>8</option>
+                        <option value=9>9</option>
+                        <option value=10>10</option>
+                        <option value=11>10+</option>
+                    </select>
                 </div>
             </div>
             <div *ngIf="tipoUsuario=='ESTUDIANTE'" class="form-group">
@@ -382,18 +391,18 @@
                         </div>
                         <div class="col-sm-6">
                             <select [(ngModel)]="ac.porcentaje" class="form-control" name="percentageAC">
-                            <option value=0>0%</option>
-                            <option value=10>10%</option>
-                            <option value=20>20%</option>
-                            <option value=30>30%</option>
-                            <option value=40>40%</option>
-                            <option value=50>50%</option>
-                            <option value=60>60%</option>
-                            <option value=70>70%</option>
-                            <option value=80>80%</option>
-                            <option value=90>90%</option>
-                            <option value=100>100%</option>
-                        </select>
+                                <option value=0>0%</option>
+                                <option value=10>10%</option>
+                                <option value=20>20%</option>
+                                <option value=30>30%</option>
+                                <option value=40>40%</option>
+                                <option value=50>50%</option>
+                                <option value=60>60%</option>
+                                <option value=70>70%</option>
+                                <option value=80>80%</option>
+                                <option value=90>90%</option>
+                                <option value=100>100%</option>
+                            </select>
                         </div>
                     </div>
                 </div>
