--- a/src/app/newsfeed/home.component.html
+++ b/src/app/newsfeed/home.component.html
@@ -13,7 +13,6 @@
                         <option value="NU">Nueva</option>
                         <option value="PC">Para continuar</option>
                         <option value="PE">Para empezar</option>
-                        <option value="PR">Proyecto</option>
                     </select>
                 </div>
             
@@ -51,9 +50,11 @@
                     <div class="panel panel-danger">
                         <div class="panel-heading">{{i.usuario}}</div>
                         <div class="panel-body">{{i.contenido}}</div>
+                        <div class="panel-body">{{i.comentarios}}</div>
                         <div class="row">
-                            <div class="col-xs-4"><button type="button" (click)="operacion(i)" class="btn btn-default btn-block"><i class="glyphicon glyphicon-asterisk"></i> Light</button></div>
-                            <div class="col-xs-4"><button type="button" class="btn btn-default btn-block"><i class="glyphicon glyphicon-comment"></i> Comment</button></div>
+                            <div class="col-xs-4"><button type="button" (click)="light(i)" class="btn btn-default btn-block"><i class="glyphicon glyphicon-asterisk"></i> Light</button></div>
+                            <div class="col-xs-4"><button type="button" (click)="comentar(i)" class="btn btn-default btn-block"><i class="glyphicon glyphicon-comment" ></i> Comentar</button></div>
+                            
                             <div class="col-xs-4"><button type="button" class="btn btn-default btn-block"><i class="glyphicon glyphicon-share"></i> Share</button></div>
                         </div>
                     </div>
