--- a/src/app/user/myprofile.component.html
+++ b/src/app/user/myprofile.component.html
@@ -26,6 +26,7 @@
         </ul>
     </div>
 </nav>
+
 <div *ngIf="activeTab == 'ideas'" class="row">
     <div class="col-xs-1">
     </div>
@@ -50,6 +51,48 @@
         </div>
     </div>
     <div class="col-xs-7">
+        <div class="form-group">
+                    <label for="sel1">Seleccione el tipo de idea:</label>
+                    <select class="form-control" id="sel1" [(ngModel)] = "selectedValueTipo" name = "tipoIdea" [ngModelOptions]="{standalone: true}">
+                        <option value="NU">Nueva</option>
+                        <option value="PC">Para continuar</option>
+                        <option value="PE">Para empezar</option>
+                        <option value="PE">Para empezar</option>
+                    </select>
+                </div>
+            
+                <div class="form-group">
+                    <h4>Contenido</h4>
+                    <textarea class="form-control" rows="5" 
+                        [(ngModel)]="contenido" name = "content"></textarea>
+                </div >
+
+                <div class="form-group" *ngIf = "selectedValueTipo == 'PC' || selectedValueTipo == 'PE'">
+                    <label for="numeroest">Numero de estudiantes: </label>
+                    <input class="form-control" type="number"  
+                        [(ngModel)] = "numeroEstudiantes" name = "numero">  
+                </div>
+
+                <div class="form-group" *ngIf = "selectedValueTipo == 'PE'">
+                    <label for="alcance">Alcance: </label>
+                    <input class="form-control" type="text" [(ngModel)] = "alcance" name = "alc">
+
+                    <label for="problematica">Problematica: </label>
+                    <input class="form-control" type="text"
+                        [(ngModel)] = "problematica" name ="problem"> 
+
+                </div>
+                <div class="form-group" *ngIf = "selectedValueTipo == 'PR'">
+                    <button type="button" class="btn">Agregar ideas</button>
+                </div>
+                <div class="form-group" *ngIf = "selectedValueTipo == 'PC'">
+                    <button type="button" class="btn">Asociar trabajo de grado</button>
+                </div>
+                <p-autoComplete [(ngModel)]="selectedTags" [suggestions]="filteredTagsMultiple" (completeMethod)="filterTagMultiple($event)"
+                    [minLength]="1" placeholder="tags" field="nombre" [multiple]="true" [ngModelOptions]="{standalone: true}">
+                </p-autoComplete>
+                <br>
+                <button type="button" (click)="crearIdea()" class="btn btn-primary">Publicar</button>
         <div class="panel panel-default center" *ngFor="let i of ideas">
             <div class="panel panel-danger">
                 <div class="panel-heading">{{i.usuario}}</div>
