--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,9 +16,10 @@
                 <!-- <li><a href="#">Inicio</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#contact">Contact</a></li> -->
-                <form *ngIf="!isAdmin" class="navbar-form navbar-left">
+                <form *ngIf="!isAdmin" (ngSubmit)="goToSearch()" class="navbar-form navbar-left">
                     <div class="input-group">
-                        <input type="text" class="form-control" placeholder="Search">
+                        <input [(ngModel)]="search" type="text" class="form-control" 
+                            placeholder="Buscar" name="search">
                         <div class="input-group-btn">
                             <button class="btn btn-default" type="submit">
                                 <i class="glyphicon glyphicon-search"></i>
@@ -44,7 +45,6 @@
         <!--/.nav-collapse -->
     </div>
 </nav>
-<br>
 <div class="router-outlet">
     <router-outlet></router-outlet>
 </div>
