--- a/src/app/access/login.component.html
+++ b/src/app/access/login.component.html
@@ -1,7 +1,43 @@
 <div class="container">
     <div class="row">
         <div class="col-xs-8">
-            <h1>Info</h1>
+            <h2>¿Todavía no sabes qué tema de trabajo de grado desarrollar?</h2>
+            <br>
+            <div  align="center" class="col-xs-6">
+                <div class="media-left">
+                    <img src="images/busca.png" class="media-object" style="width:150px">
+                </div>
+                <div class="media-body">
+                    <h4 class="media-heading"><b>BUSCA</b></h4>
+                        <p>Know&Share te permite buscar ideas de trabajo de grado, así como usuarios para conectarte. Adicionalmente te recomienda ideas teniendo en cuenta tus habilidades, gustos y preferencias.</p>
+                </div>
+                <br>
+                <div class="media-left">
+                    <img src="images/avala.png" class="media-object" style="width:150px">
+                </div>
+                <div class="media-body">
+                    <h4 class="media-heading"><b>AVALA</b></h4>
+                        <p>Avala las cualidades de tus profesores y a final de semestre mira quien gana la insignia al mejor profesor en cada categoría.</p>
+                </div>
+            </div>
+
+            <div  align="center" class="col-xs-6">
+                <div class="media-left">
+                    <img src="images/conectate.png" class="media-object" style="width:150px">
+                </div>
+                <div class="media-body">
+                    <h4 class="media-heading"><b>CONÉCTATE</b></h4>
+                        <p>Sigue a una persona de interes ó crea una relación de confianza con tus amigos. No te preocupes... Know&Share también te recomienda usuarios para seguir o agregar segú tu perfil.</p>
+                </div>
+                <br>
+                <div class="media-left">
+                    <img src="images/idea.png" class="media-object" style="width:100px">
+                </div>
+                <div class="media-body">
+                    <h4 class="media-heading"><b>IDEAS</b></h4>
+                        <p>Know&Share te ofrece 4 tipos de ideas: Nueva, Para Empezar, Para Continuar y Proyecto... Pruebalas todas! </p>
+                </div>
+            </div>
 
         </div>
         <div class="col-xs-4">
